--- a/java-practice/pom.xml
+++ b/java-practice/pom.xml
@@ -6,13 +6,12 @@
     <artifactId>java-practice</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
-
-    <name>com.practice</name>
-    <url>http://maven.apache.org</url>
+    <name>Java Practice</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
 
     <dependencies>
         <dependency>
