--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>java-knowledge.test</groupId>
-    <artifactId>java-knowledge.test</artifactId>
+    <groupId>java-backlog</groupId>
+    <artifactId>java-backlog</artifactId>
     <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
-    <name>java-knowledge-test Package</name>
+    <name>Java Backlog</name>
 
     <modules>
         <module>java-practice</module>
