add unit test module

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>java-feature</module>
         <module>data-exchange</module>
         <module>java-aop</module>
+        <module>java-unit-testing</module>
     </modules>
 
     <build>
